--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ deploy:
   api_key:
     secure: cHioI6HfZgP5JZxcOnMkr8f2t6pmnT0yIhcXy1H1qQqMmmWYeSzDVcHCAEHtc+9qMe5JKuRcjayYbTf6rNgxOvDSWQa+El7jkDEnhfQORkbsuGOjea4P2u0wl/En7vJ0aekelwPOxRQzp5ny1HTh/TX0LON7/miMVniJV1wB+YU=
   app: arcane-dawn-1089
+  run:
+    - "rake db:migrate"
+    - restart
   on:
     repo: yuchan/sinatra-boilerplate
